--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,14 +5,147 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+	font-family: "Poppins", sans-serif;
 }
 
 :root {
-	--bg-black: #0F0E16;
+	--bg-black: rgb(15, 14, 22);
 	--text-intense-pink: #FB1351;
 	--text-white: #ffffff;
-    --weight-regular: 400;
-    --weight-semi-bold: 600;
-    --weight-bold: 700;
+	--weight-regular: 400;
+	--weight-semi-bold: 600;
+	--weight-bold: 700;
+}
+
+body {
+	background-color: var(--bg-black);
+}
+
+/* Header */
+
+.header-container {
+	position: relative;
+	background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(15, 14, 22)), url("../img/bg-header.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	.imagen-superpuesta {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		opacity: 80%;
+		z-index: 1;
+	}
+
+	.movie-header {
+		height: 80vh;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+
+		h1 {
+			color: var(--text-white);
+			font-weight: var(--weight-semi-bold);
+			font-size: 5rem;
+			z-index: 2;
+		}
+
+		.info-movie {
+			display: flex;
+			gap: 10px;
+			align-items: center;
+			z-index: 2;
+
+			.pg-info {
+				font-weight: var(--weight-semi-bold);
+				padding: 3px 5px 2px 5px;
+				border-radius: 2px;
+				border: solid 1px white;
+				color: var(--text-white);
+				letter-spacing: 1px;
+			}
+
+			.time-info {
+				font-weight: var(--weight-regular);
+				color: var(--text-white);
+			}
+		}
+
+		.description-movie {
+			z-index: 2;
+			font-weight: var(--weight-regular);
+			color: var(--text-white);
+			opacity: 90%;
+			width: 70%;
+			text-wrap: balance;
+			line-height: 30px;
+		}
+
+		button {
+			z-index: 2;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: var(--text-intense-pink);
+			border: none;
+			color: white;
+			font-weight: var(--weight-bold);
+			padding: 15px 10px 15px 10px;
+			border-radius: 2px;
+			width: 9rem;
+			transition: 0.5s;
+
+			svg {
+				margin-right: 10px;
+			}
+		}
+
+		button:hover {
+			transition: 0.5s;
+			background-color: #fb1351c2;
+		}
+	}
+
+	#btn-header {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 1440px) {
+
+
+	.header-container {
+		.imagen-superpuesta {
+			background-position: 70%;
+			opacity: 20%;
+		}
+
+		.movie-header {
+			height: 65vh;
+
+			h1 {
+				color: var(--text-white);
+				font-weight: var(--weight-semi-bold);
+				font-size: 2.5rem;
+			}
+
+			.description-movie {
+				width: 100%;
+			}
+
+			button {
+				padding: 10px 5px 10px 5px;
+			}
+		}
+
+		#btn-header {
+			display: none;
+		}
+	}
 }
