--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -21,6 +21,29 @@ body {
 	background-color: var(--bg-black);
 }
 
+/* Preloader */
+#loader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--bg-black);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  #loader img {
+	width: 150px;
+	height: 150px;
+  }
+  
+  #content {
+	position: relative;
+	z-index: 1;
+  }
+
 /* Header */
 
 .header-container {
