--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-* {
+*{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -18,8 +18,152 @@
 }
 
 body {
-	background-color: var(--bg-black);
-}
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		font-family: 'Nunito', sans-serif;
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 700;
+        font-size: 1.2rem;
+	  }
+	background-color: #181419;
+    color: white;
+  }
+  
+  .header {
+	
+    background-color: #9f3647;
+    color: #ffffff;
+	height: 10vh;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+  
+    .navegacion {
+		
+	  list-style: none;
+      display: flex;
+	  justify-content: space-between;
+      align-items: center;
+      margin-left: 40px;
+      margin-right: 40px;
+      padding: 1.5rem 0;
+  
+      .anclaLogo {
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 700;
+        font-size: 1.2rem;
+      }
+  
+      .listaNav {
+        list-style: none;
+        display: flex;
+        align-items: center;
+  
+        .listaItem {
+          margin-right: 20px;
+  
+          .linkNav {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1.1rem;
+            padding: 0.5rem 1rem;
+            transition: transform 0.3s;
+            box-shadow: 0.3s;
+  
+            transition: 0.3s;
+            box-shadow: 0.3s;
+            &:hover {
+              transform: scale(0.95);
+              box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+              border-radius: 5px;
+            }
+          }
+          .linkNav.iniciarSesion {
+            background-color: #181419;
+            color: white;
+            border-radius: 5px;
+  
+            transition: 0.3s;
+            box-shadow: 0.3s;
+            &:hover {
+              background-color: #9f3647;
+              transform: scale(0.95);
+              box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            }
+          }
+        }
+      }
+    }
+  
+  }
+  @media (max-width: 768px) {
+      .header {
+        height: initial;
+        .navegacion{
+          margin-left: 10px;
+          margin-right: 10px;
+          flex-direction: column;
+          row-gap: 20px;
+  
+          .anclaLogo {
+              font-weight: 700;
+              font-size: 1.2rem;
+            }
+            .listaNav{
+              padding: initial;
+  
+              .listaItem{
+                  .linkNav{
+                      font-weight: 700;
+                      margin-right: initial;
+                      font-size: 1rem;
+                      padding: 0.2rem;
+                  }
+              }
+            }
+  
+  
+  
+        }
+      }
+	  @media (max-width: 768px) {
+		.header {
+		  height: initial;
+		  .navegacion{
+			margin-left: 10px;
+			margin-right: 10px;
+			flex-direction: column;
+			row-gap: 20px;
+	
+			.anclaLogo {
+				font-weight: 700;
+				font-size: 1.2rem;
+			  }
+			  .listaNav{
+				padding: initial;
+	
+				.listaItem{
+					.linkNav{
+						font-weight: 700;
+						margin-right: initial;
+						font-size: 1rem;
+						padding: 0.2rem;
+					}
+				}
+			  }
+	
+	
+	
+		  }
+		}
+	  }
+    }
+
 
 /* Preloader */
 
@@ -38,7 +182,6 @@ body {
 		width: 150px;
 		height: 150px;
 	}
-
 	#content {
 		position: relative;
 		z-index: 1;
